CorsairSDK/SDK/Reference/iCUESDK.cs


        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairGetDevices([NativeTypeName("const CorsairDeviceFilter *")] CorsairDeviceFilter* filter, int sizeMax, CorsairDeviceInfo* devices, int* size);

        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairGetDeviceInfo([NativeTypeName("const CorsairDeviceId")] sbyte* deviceId, CorsairDeviceInfo* deviceInfo);

        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairGetLedPositions([NativeTypeName("const CorsairDeviceId")] sbyte* deviceId, int sizeMax, CorsairLedPosition* ledPositions, int* size);

        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairSubscribeForEvents([NativeTypeName("CorsairEventHandler")] delegate* unmanaged[Cdecl]<void*, CorsairEvent*, void> onEvent, void* context);

        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairUnsubscribeFromEvents();

        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairConfigureKeyEvent([NativeTypeName("const CorsairDeviceId")] sbyte* deviceId, [NativeTypeName("const CorsairKeyEventConfiguration *")] CorsairKeyEventConfiguration* config);

        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairGetDevicePropertyInfo([NativeTypeName("const CorsairDeviceId")] sbyte* deviceId, CorsairDevicePropertyId propertyId, [NativeTypeName("unsigned int")] uint index, CorsairDataType* dataType, [NativeTypeName("unsigned int *")] uint* flags);

        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairReadDeviceProperty([NativeTypeName("const CorsairDeviceId")] sbyte* deviceId, CorsairDevicePropertyId propertyId, [NativeTypeName("unsigned int")] uint index, CorsairProperty* property);

        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairWriteDeviceProperty([NativeTypeName("const CorsairDeviceId")] sbyte* deviceId, CorsairDevicePropertyId propertyId, [NativeTypeName("unsigned int")] uint index, [NativeTypeName("const CorsairProperty *")] CorsairProperty* property);

        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairFreeProperty(CorsairProperty* property);

        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairSetLedColors([NativeTypeName("const CorsairDeviceId")] sbyte* deviceId, int size, [NativeTypeName("const CorsairLedColor *")] CorsairLedColor* ledColors);

        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairSetLedColorsBuffer([NativeTypeName("const CorsairDeviceId")] sbyte* deviceId, int size, [NativeTypeName("const CorsairLedColor *")] CorsairLedColor* ledColors);

        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairSetLedColorsFlushBufferAsync([NativeTypeName("CorsairAsyncCallback")] delegate* unmanaged[Cdecl]<void*, CorsairError, void> callback, void* context);

        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairGetLedColors([NativeTypeName("const CorsairDeviceId")] sbyte* deviceId, int size, CorsairLedColor* ledColors);

        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairSetLayerPriority([NativeTypeName("unsigned int")] uint priority);

        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairGetLedLuidForKeyName([NativeTypeName("const CorsairDeviceId")] sbyte* deviceId, [NativeTypeName("char")] sbyte keyName, [NativeTypeName("CorsairLedLuid *")] uint* ledId);

        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairRequestControl([NativeTypeName("const CorsairDeviceId")] sbyte* deviceId, CorsairAccessLevel accessLevel);

        [DllImport(ArchitectureConstants.iCUESDK, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern CorsairError CorsairReleaseControl([NativeTypeName("const CorsairDeviceId")] sbyte* deviceId);
    }
}
